2011-11-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm: Revert the change of 2011-08-25 that tried to skip 
	empty vectors. The concept was sound but the implementation was not
	correct, leading to mysteriously missing lines.
	Bugfix.

2011-11-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/misc.c src/hidden3d.c:  New flag LT_SINGLECOLOR
	passed through to hidden3d to indicate that the user gave an explicit
	surface color in the splot command.
	Bugfix.

2011-11-22  Ethan A Merritt  <merritt@u.washington.edu>

	* Branchpoint for 4.6
	cvs tag -b branch-4-6-stable

2011-11-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/contour.c (contour): Format contour labels using gprintf rather
	than sprintf so that LC_NUMERIC and "set decimal" are honored.
	Bugfix.

	* term/js/gnuplot_svg.js: Try to correct for coordinate offset due to
	scrollbars.  The fix is unfortunately browser specific.

2011-11-22  Peter <plotter@piments.com>

	* term/svg.trm: "standalone" option includes gnuplot_svg.js mousing
	support directly in the output *.svg file rather than linking to it
	as an external resource.

2011-11-18  Daniel Leidert  <dleidert@users.sourceforge.net>

	* demo/html/webify.pl demo/html/webify_svg.pl demo/html/webify_canvas.pl
	Use perl5 native routine ctime() rather than perl4 external module.

	* src/datafile.c term/epson.trm term/post.trm:
	Typos.

	* configure.in: Check for lua5.1.pc if lua.pc is not found.

	* man/gnuplot.1: Add some needed character escapes.

2011-11-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgdiplus.cpp src/win/wgdiplus.h src/win/wgnuplib.h
	src/win/wgraph.c src/win/wresourc.h: Antialiasing of fill patterns.

	* src/win/wgraph.c (CopyPrint): Use Print Setup dialog since the Page
	Setup dialog does not offer a possibility to change printer. Do not
	use antialiasing on printers.

2011-11-15  Bastian Maerkisch  <bmaerkisch@web.de>
