@@ -1,3 +1,10 @@
+2011-11-28  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/scanner.c (legal_identifier) src/scanner.h src/stats.c:
+	Make sure that the variable name produced by the "stats ... prefix"
+	command is a legal identifier.
+	Bug #3441395
+
 2011-11-26  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/cairo.trm: Revert the change of 2011-08-25 that tried to skip 
